add: natural translation

--- a/src/i18n/locales/uk/models/alert-point.json
+++ b/src/i18n/locales/uk/models/alert-point.json
@@ -1,16 +1,16 @@
 {
   "meta": {
     "name": "Alert Point",
-    "description": "Точка оповіщення з опціональним маяком",
-    "heroTitle": "Автономний сигнальний пристрій для оповіщення про надзвичайну ситуацію",
-    "heroDescription": "Alert Point працює від лужної батареї 9В та включає вбудовану сирену і точку виклику зі скиданням. При активації видає сигнал тривоги 102 дБ, прапорець активації опускається у видиму область, а вбудований світлодіод блимає червоним. Будь-які зовнішні підключені пристрої будуть активовані. Легко скидається ключем, забезпечуючи швидке повернення пристрою в робочий стан. Функція заглушення може вимкнути сигнал тривоги до скидання Alert Point. Зверніть увагу: для більших обсягів може знадобитися довший термін виконання."
+    "description": "Оповіщувач з опціональним маяком",
+    "heroTitle": "Автономний пристрій сигналізації для оповіщення про надзвичайну ситуацію",
+    "heroDescription": "Alert Point працює від лужної батареї 9В та включає вбудований зумер і ручний сповіщувач з можливістю відновлення. Після активації пристрій видає сигнал тривоги 102 дБ, прапорець активації випадає у видиму зону, а вбудований світлодіод блимає червоним. Усі підключені зовнішні пристрої будуть активовані. Пристрій легко відновлюється ключем, що забезпечує швидке повернення до робочого стану. Функція примусового вимкнення дозволяє заглушити сигнал тривоги до відновлення Alert Point. Зверніть увагу: для великих замовлень може знадобитися більший термін поставки."
   },
   "steps": {
     "series": {
       "title": "СЕРІЯ",
       "options": {
-        "1": "#1 Alert Point (обмежений запас - зверніться до відділу продажів)",
-        "3": "#3 Alert Point з маяком (обмежений запас - зверніться до відділу продажів)"
+        "1": "#1 Alert Point (обмежений запас — зверніться до відділу продажів)",
+        "3": "#3 Alert Point з маяком (обмежений запас — зверніться до відділу продажів)"
       }
     },
     "colour": {
@@ -23,19 +23,19 @@
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "A": "#A Етикетка 'A'",
-        "B": "#B Етикетка 'B'",
-        "C": "#C Етикетка 'C'",
-        "D": "#D Етикетка 'D'",
-        "E": "#E Етикетка 'E'",
-        "F": "#F Етикетка 'F'",
-        "G": "#G Етикетка 'G'",
-        "H": "#H Етикетка 'H'",
-        "I": "#I Етикетка 'I'",
-        "R": "#R Етикетка 'R'",
-        "X": "#X Власна або без етикетки"
+        "A": "#A Напис 'A'",
+        "B": "#B Напис 'B'",
+        "C": "#C Напис 'C'",
+        "D": "#D Напис 'D'",
+        "E": "#E Напис 'E'",
+        "F": "#F Напис 'F'",
+        "G": "#G Напис 'G'",
+        "H": "#H Напис 'H'",
+        "I": "#I Напис 'I'",
+        "R": "#R Напис 'R'",
+        "X": "#X Індивідуальний або без напису"
       }
     }
   }
