--- a/src/i18n/locales/uk/models/call-point-stopper.json
+++ b/src/i18n/locales/uk/models/call-point-stopper.json
@@ -1,9 +1,9 @@
 {
   "meta": {
     "name": "Call Point Stopper",
-    "description": "Захисна кришка для точок виклику",
-    "heroTitle": "Недорога кришка з підпружиненим шарніром",
-    "heroDescription": "Call Point Stopper — це UV-стабілізована полікарбонатна кришка, яка захищає широкий спектр електричних перемикачів та точок виклику, не обмежуючи їх законне використання. Call Point Stopper ідеально підходить для торгових центрів, готелів, шкіл, коледжів, лікарень, будинків престарілих та всіх громадських будівель, де існує ризик випадкової активації."
+    "description": "Захисний корпус для ручних сповіщувачів",
+    "heroTitle": "Економічний корпус із підпружиненими завісами",
+    "heroDescription": "Call Point Stopper — це УФ-стійкий полікарбонатний корпус, який захищає широкий спектр електричних перемикачів та ручних сповіщувачів, не обмежуючи їх штатну роботу. Call Point Stopper ідеально підходить для торгових центрів, готелів, шкіл, коледжів, лікарень, будинків престарілих та всіх громадських будівель, де існує ризик випадкової активації."
   },
   "steps": {
     "colour": {
@@ -18,13 +18,13 @@
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "FIRE": "У випадку пожежі",
-        "EMERGENCY_BREAK": "У випадку аварії розбийте скло",
-        "EMERGENCY_OPERATE": "У випадку аварії натисніть",
-        "PLAIN": "Порожня, без тексту",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "FIRE": "У разі пожежі",
+        "EMERGENCY_BREAK": "В аварійній ситуації розбити скло",
+        "EMERGENCY_OPERATE": "В аварійній ситуації активувати",
+        "PLAIN": "Без напису",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -34,14 +34,14 @@
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
         "DE": "#DE Німецька",
-        "NL": "#NL Нідерландська"
+        "NL": "#NL Голландська"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "0": "#0 Врізний",
-        "1": "#1 Поверхневий монтаж (35мм)"
+        "0": "#0 Заглиблений монтаж",
+        "1": "#1 Накладний монтаж (35мм)"
       }
     }
   }
