--- a/src/i18n/locales/uk/models/enviro-armour.json
+++ b/src/i18n/locales/uk/models/enviro-armour.json
@@ -1,15 +1,15 @@
 {
   "meta": {
-    "name": "EnviroArmour",
-    "description": "Захисний корпус для зовнішнього обладнання",
-    "heroTitle": "Захист IP 54 для обладнання від пошкоджень та проникнення",
-    "heroDescription": "Міцні полікарбонатні та скловолоконні корпуси з можливістю замикання. Ці атмосферостійкі неметалеві корпуси призначені для подовження терміну служби електронного обладнання, яке потребує захисту від складних умов та пошкоджень, як випадкових, так і зловмисних. Ці корпуси можуть захистити різноманітні пристрої, такі як виносні панелі, панелі управління пожежною сигналізацією або інші електронні вироби, що піддаються ризику пошкодження від вандалізму або проникнення. Серія має клас захисту IP54, що робить їх придатними для внутрішнього та зовнішнього застосування. Моделі постачаються з монтажною пластиною для легкого встановлення. Ці атмосферостійкі корпуси доступні в різних розмірах для різноманітних застосувань."
+    "name": "Enviro Armour",
+    "description": "Захисний корпус для вуличного обладнання",
+    "heroTitle": "Захист обладнання IP54 від пошкоджень та потрапляння сторонніх речовин",
+    "heroDescription": "Міцні полікарбонатні та склопластикові корпуси з можливістю замикання. Погодостійкі неметалеві корпуси призначені для подовження терміну служби електронного обладнання, яке потребує захисту від складних умов експлуатації та пошкоджень, як випадкових, так і навмисних. Ці корпуси можуть захистити різноманітні пристрої, такі як виносні індикаторні панелі, панелі керування пожежною сигналізацією або інші електронні вироби, що піддаються ризику пошкодження від вандалізму або потрапляння сторонніх речовин. Серія має клас захисту IP54, що робить їх придатними для внутрішнього та вуличного застосування. Моделі постачаються з монтажною пластиною для легкості встановлення. Ці погодостійкі корпуси доступні в різних розмірах для різноманітних застосувань."
   },
   "steps": {
     "material": {
       "title": "МАТЕРІАЛ",
       "options": {
-        "S": "#S Скловолокно (обмежений запас)",
+        "S": "#S Склопластик (обмежений запас)",
         "T": "#T Полікарбонат (обмежений запас)"
       }
     },
@@ -26,10 +26,10 @@
       }
     },
     "doorType": {
-      "title": "ТИП ДВЕРЦЯТ",
+      "title": "ТИП ДВЕРЕЙ",
       "options": {
-        "C": "#C Прозорі дверцята (обмежений запас)",
-        "O": "#O Непрозорі дверцята (обмежений запас)"
+        "C": "#C Прозорі двері (обмежений запас)",
+        "O": "#O Непрозорі двері (обмежений запас)"
       }
     }
   }
