--- a/src/i18n/locales/uk/models/enviro-stopper.json
+++ b/src/i18n/locales/uk/models/enviro-stopper.json
@@ -1,45 +1,45 @@
 {
   "meta": {
     "name": "Enviro Stopper®",
-    "description": "Захисна кришка для зовнішнього використання",
-    "heroTitle": "Сертифікована кришка IP66/56 для використання в складних умовах",
-    "heroDescription": "Захисна кришка з класом IP ідеально підходить для подовження терміну служби та надійності пристроїв, що піддаються впливу складних умов, таких як зони з миттям. Enviro Stopper забезпечує захист ручних сповіщувачів та перемикачів від проникнення пилу та води як зовні, так і всередині приміщень, а також запобігає втручанню, вандалізму та пошкодженням від випадкової чи зловмисної активації."
+    "description": "Захисний корпус для вуличного використання",
+    "heroTitle": "Корпус із сертифікацією IP66/56 для експлуатації в складних умовах",
+    "heroDescription": "Захисний корпус з класом захисту IP ідеально підходить для подовження терміну служби та надійності пристроїв, що працюють у складних умовах, наприклад, у зонах миття. Enviro Stopper забезпечує захист ручних сповіщувачів та перемикачів від пилу та потрапляння води як ззовні, так і всередині приміщень, а також запобігає несанкціонованому доступу, вандалізму та пошкодженням від випадкової або зловмисної активації."
   },
   "steps": {
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "13": "#13 Куполоподібна кришка",
-        "14": "#14 Низькопрофільна кришка"
+        "13": "#13 Купольний корпус",
+        "14": "#14 Низькопрофільний корпус"
       }
     },
     "hoodSounder": {
-      "title": "КОРПУС, СИРЕНА ТА БЕЗДРОТ",
+      "title": "КОЗИРОК, ЗУМЕР І БЕЗДРОТОВИЙ ЗВ'ЯЗОК",
       "options": {
-        "00": "#00 Корпус без етикетки",
-        "10": "#10 Корпус з етикеткою без сирени",
-        "20": "#20 Корпус з етикеткою та сиреною",
-        "30": "#30 Корпус з етикеткою, сиреною та реле"
+        "00": "#00 Козирок без напису",
+        "10": "#10 Козирок з написом, без зумера",
+        "20": "#20 Козирок з написом та зумером",
+        "30": "#30 Козирок з написом, зумером та реле"
       }
     },
     "colourLabel": {
-      "title": "КОЛІР І ЕТИКЕТКА",
+      "title": "КОЛІР І НАПИС",
       "options": {
-        "FR": "#FR Червоний, етикетка 'FIRE ALARM'",
-        "NR": "#NR Червоний, без етикетки",
-        "CR": "#CR Червоний, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "EG": "#EG Зелений, етикетка 'Emergency Exit'",
-        "NG": "#NG Зелений, без етикетки",
-        "CG": "#CG Зелений, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NC": "#NC Прозорий, без етикетки",
-        "NK": "#NK Чорний, без етикетки",
-        "CK": "#CK Чорний, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NB": "#NB Синій, без етикетки",
-        "CB": "#CB Синій, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NW": "#NW Білий, без етикетки",
-        "CW": "#CW Білий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NY": "#NY Жовтий, без етикетки",
-        "CY": "#CY Жовтий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "FR": "#FR Червоний, напис FIRE ALARM",
+        "NR": "#NR Червоний, без напису",
+        "CR": "#CR Червоний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "EG": "#EG Зелений, напис EMERGENCY EXIT",
+        "NG": "#NG Зелений, без напису",
+        "CG": "#CG Зелений, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NC": "#NC Прозорий, без напису",
+        "NK": "#NK Чорний, без напису",
+        "CK": "#CK Чорний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NB": "#NB Синій, без напису",
+        "CB": "#CB Синій, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NW": "#NW Білий, без напису",
+        "CW": "#CW Білий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NY": "#NY Жовтий, без напису",
+        "CY": "#CY Жовтий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -49,14 +49,14 @@
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
         "DE": "#DE Німецька",
-        "NL": "#NL Нідерландська"
+        "NL": "#NL Голландська"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "6": "#6 Європейська закрита задня коробка, вхідний отвір 20мм, герметична монтажна плита",
-        "7": "#7 Європейська закрита задня коробка, вхідний отвір 20мм, відкрита монтажна плита"
+        "6": "#6 Європейська закрита розподільча коробка, кабельний ввід 20мм, герметична монтажна пластина",
+        "7": "#7 Європейська закрита розподільча коробка, кабельний ввід 20мм, відкрита монтажна пластина"
       }
     }
   }
