--- a/src/i18n/locales/uk/models/gf-fire-alarm-push-button.json
+++ b/src/i18n/locales/uk/models/gf-fire-alarm-push-button.json
@@ -1,30 +1,30 @@
 {
   "meta": {
     "name": "GF Fire Alarm Push Button",
-    "description": "Кнопка пожежної сигналізації GF з опціональною камерою",
-    "heroTitle": "Допомагає запобігти небажаним активаціям пожежної сигналізації",
-    "heroDescription": "UL-сертифікована кнопка пожежної сигналізації GF з опціональною IP-камерою має інноваційний дизайн, який допомагає ідентифікувати осіб при активації кнопки. IP-камера допомагає в ідентифікації особи, яка активує пожежну сигналізацію. Доступний вибір опціональних кришок (зі звуком або без), які забезпечують додатковий захист для запобігання вандалізму або випадковій активації. GF спеціально розроблений для доповнення систем пожежної сигналізації.\n\nРежими роботи включають конфігурацію натисни-для-активації та скидання-ключем.\n\nДля перегляду G3 Multipurpose Push Button <a href=\"/configurator/g3-multipurpose-push-button\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
+    "description": "Пожежна кнопка GF з опціональною камерою",
+    "heroTitle": "Допомагає запобігти небажаній активації пожежної сигналізації",
+    "heroDescription": "Пожежна кнопка GF із сертифікацією UL та опціональною IP-камерою має інноваційну конструкцію, що допомагає ідентифікувати особу при активації кнопки. IP-камера сприяє ідентифікації особи, яка активує пожежну сигналізацію. Доступний вибір опціональних корпусів (зі звуковим сигналом або без нього), які забезпечують додатковий захист від вандалізму або випадкової активації. GF спеціально розроблена для доповнення систем пожежної сигналізації.\n\nРежим роботи: активація натисканням та відновлення ключем.\n\nЩоб переглянути багатоцільову кнопку G3, <a href=\"/configurator/g3-multipurpose-push-button\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
   },
   "steps": {
     "model": {
       "title": "МОДЕЛЬ",
       "options": {
         "A": "#A Без камери",
-        "C": "#C З камерою (включає задню коробку)"
+        "C": "#C З камерою (включає розподільчу коробку)"
       }
     },
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "0": "#0 Без кришки",
-        "2": "#2 Захисний щиток"
+        "0": "#0 Без корпусу",
+        "2": "#2 Захисний екран"
       }
     },
     "text": {
-      "title": "ТЕКСТ",
+      "title": "НАПИС",
       "options": {
-        "FR": "#FR ПОЖЕЖА",
-        "HF": "#HF Символ полум'я будинку"
+        "FR": "#FR FIRE",
+        "HF": "#HF Піктограма пожежі"
       }
     },
     "language": {
