--- a/src/i18n/locales/uk/models/global-reset.json
+++ b/src/i18n/locales/uk/models/global-reset.json
@@ -1,9 +1,9 @@
 {
   "meta": {
     "name": "Global ReSet®",
-    "description": "Точка виклику з функцією скидання",
-    "heroTitle": "Великий ручний сповіщувач зі скиданням для глобального використання",
-    "heroDescription": "UL-сертифікований пожежний сповіщувач зі скиданням, який імітує активацію розбиттям скла без справжнього скла. Універсальна монтажна пластина підходить для американських, європейських (тільки моделі GLR), подвійних та одинарних монтажних коробок, що робить встановлення швидким та легким. При активації індикатор опускається у видиму область. Просте скидання за допомогою ключа з комплекту для негайного повторного використання. Корпус доступний у п'яти кольорах для пожежного сповіщувача. Скидання ключем DPDT з 2 контактами Form C.\n\n<strong>МОНТАЖ</strong> — Global Reset (тільки моделі GLR) постачаються лише для врізного монтажу. Задні коробки доступні для поверхневого монтажу."
+    "description": "Ручний сповіщувач з можливістю відновлення",
+    "heroTitle": "Великий ручний сповіщувач з можливістю відновлення для глобального використання",
+    "heroDescription": "Ручний сповіщувач з можливістю відновлення та сертифікацією UL, що імітує активацію розбиттям скла без розбитого скла. Універсальна монтажна пластина підходить до американських, європейських (тільки моделі GLR), подвійних та одинарних монтажних коробок, що робить встановлення швидким та легким. При активації індикатор випадає у видиму зону. Просте відновлення за допомогою ключа з комплекту для негайного повторного використання. Корпус пожежного сповіщувача доступний у п'яти кольорах. Відновлення ключем, DPDT з 2 контактами Form C.\n\n<strong>МОНТАЖ</strong> — Global Reset (тільки моделі GLR) постачаються лише для заглибленого монтажу. Розподільчі коробки для накладного монтажу доступні окремо."
   },
   "steps": {
     "colour": {
@@ -17,29 +17,29 @@
       }
     },
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "01": "#01 Без кришки",
-        "21": "#21 Захисний щиток"
+        "01": "#01 Без корпусу",
+        "21": "#21 Захисний екран"
       }
     },
     "text": {
-      "title": "ТЕКСТ",
+      "title": "НАПИС",
       "options": {
-        "AB": "#AB СКАСУВАТИ",
-        "EM": "#EM АВАРІЯ",
-        "ES": "#ES АВАРІЙНА ЗУПИНКА",
-        "EV": "#EV ЕВАКУАЦІЯ",
-        "EX": "#EX АВАРІЙНИЙ ВИХІД",
-        "HV": "#HV ВИМКНЕННЯ HVAC",
-        "LD": "#LD БЛОКУВАННЯ",
-        "NT": "#NT БЕЗ ТЕКСТУ",
-        "PO": "#PO АВАРІЙНЕ ВИМКНЕННЯ ЖИВЛЕННЯ",
-        "PS": "#PS ВИМКНЕННЯ ПАЛИВНОГО НАСОСА",
-        "PX": "#PX НАТИСНІТЬ ДЛЯ ВИХОДУ",
-        "RM": "#RM Логотип біжучої людини",
-        "XT": "#XT ВИХІД",
-        "ZA": "#ZA Власний текст (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "AB": "#AB ABORT",
+        "EM": "#EM EMERGENCY",
+        "ES": "#ES EMERGENCY STOP",
+        "EV": "#EV EVACUATION",
+        "EX": "#EX EMERGENCY EXIT",
+        "HV": "#HV HVAC SHUT-DOWN",
+        "LD": "#LD LOCKDOWN",
+        "NT": "#NT Без напису",
+        "PO": "#PO EMERGENCY POWER OFF",
+        "PS": "#PS FUEL PUMP SHUT-DOWN",
+        "PX": "#PX PUSH TO EXIT",
+        "RM": "#RM Піктограма аварійного виходу",
+        "XT": "#XT EXIT",
+        "ZA": "#ZA Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -48,7 +48,7 @@
         "EN": "#EN Англійська",
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
-        "ZL": "#ZL Інша мова (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "ZL": "#ZL Інша мова (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
