--- a/src/i18n/locales/uk/models/indoor-push-buttons.json
+++ b/src/i18n/locales/uk/models/indoor-push-buttons.json
@@ -2,12 +2,12 @@
   "meta": {
     "name": "Indoor Push Buttons",
     "description": "Кнопки для внутрішнього використання",
-    "heroTitle": "Різноманітний асортимент кнопок для багатьох застосувань",
-    "heroDescription": "Високоуніверсальний асортимент привабливих кнопок для приміщень, що поєднує унікальний дизайн, якість та цінність. Ці естетично привабливі низько/високовольтні перемикачі підходять до будь-якої стандартної монтажної коробки британського типу та швидко й легко встановлюються."
+    "heroTitle": "Широкий асортимент кнопок для різноманітних застосувань",
+    "heroDescription": "Широкий асортимент привабливих внутрішніх кнопок, що поєднують унікальний дизайн, якість та цінність. Ці естетично привабливі перемикачі низької/високої напруги підходять до будь-якої стандартної британської монтажної коробки та швидко й легко встановлюються."
   },
   "steps": {
     "colour": {
-      "title": "КОЛІР",
+      "title": "КОЛІР КОРПУСУ",
       "options": {
         "1": "#1 Червоний (подвійний монтаж)",
         "3": "#3 Зелений (подвійний монтаж)",
@@ -31,23 +31,23 @@
     "buttonType": {
       "title": "ТИП КНОПКИ",
       "options": {
-        "0": "#0 Скидання ключем",
-        "1": "#1 Миттєва дія",
-        "6": "#6 Пневматичний (ПОДОВЖЕНІ ТЕРМІНИ)"
+        "0": "#0 Відновлення ключем",
+        "1": "#1 Моментальне відновлення",
+        "6": "#6 Пневматичний таймер (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)"
       }
     },
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "0": "#0 Однополюсний перемикач",
-        "4": "#4 Багатофункціональний сигнал (SPC та DPC)"
+        "0": "#0 Однополюсний перемикальний (SPC)",
+        "4": "#4 Мультисигнальний (SPC та DPC)"
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "SELF_ASSEMBLE": "Набір етикеток для самостійного збирання",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
