--- a/src/i18n/locales/uk/models/key-switches.json
+++ b/src/i18n/locales/uk/models/key-switches.json
@@ -1,13 +1,13 @@
 {
   "meta": {
     "name": "Key Switches",
-    "description": "Ключ-перемикачі для систем контролю доступу",
-    "heroTitle": "Різноманітний асортимент ключ-перемикачів для багатьох застосувань",
-    "heroDescription": "Високоуніверсальний асортимент привабливих ключ-перемикачів, що поєднує унікальний дизайн, якість та цінність, із захисною кришкою або попередньою сигналізацією чи без них. Ці естетично привабливі низько/високовольтні перемикачі підходять до будь-якої стандартної монтажної коробки британського типу та швидко й легко встановлюються. Моделі постачаються з подвійним монтажем — призначені як для врізного, так і для поверхневого монтажу (чорна задня коробка 35 мм входить до комплекту). Усі моделі доступні в різних кольорах з місцем для маркування функції або інструкцій з експлуатації.\n\n<strong>Не підходить для зовнішнього використання. Не сумісний з Enviro Stopper.</strong>"
+    "description": "Перемикачі з ключем для систем контролю доступу",
+    "heroTitle": "Широкий асортимент перемикачів з ключем для різноманітних застосувань",
+    "heroDescription": "Широкий асортимент привабливих перемикачів з ключем, що поєднують унікальний дизайн, якість та цінність, з захисним корпусом або попередньою сигналізацією чи без них. Ці естетично привабливі перемикачі низької/високої напруги підходять до будь-якої стандартної британської монтажної коробки та швидко й легко встановлюються. Моделі постачаються з подвійним монтажем — призначені як для заглибленого, так і для накладного встановлення (чорна накладна розподільча коробка 35мм включена). Усі моделі доступні в різних кольорах з місцем для маркування функції або інструкцій з експлуатації.\n\n<strong>Не призначено для вуличного використання. Не сумісний з Enviro Stopper.</strong>"
   },
   "steps": {
     "colourMounting": {
-      "title": "КОЛІР ТА МОНТАЖ",
+      "title": "КОЛІР І МОНТАЖ",
       "options": {
         "10": "#10 Червоний (подвійний монтаж)",
         "30": "#30 Зелений (подвійний монтаж)",
@@ -29,17 +29,17 @@
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "0": "#0 Однополюсний перемикач",
-        "1": "#1 Двополюсний, нормально відкритий",
-        "2": "#2 Двополюсний, нормально закритий",
-        "3": "#3 Схема 3-позиційного ключ-перемикача"
+        "0": "#0 Однополюсний перемикальний",
+        "1": "#1 Двополюсний НВ (нормально відкритий)",
+        "2": "#2 Двополюсний НЗ (нормально замкнутий)",
+        "3": "#3 3-позиційна схема підключення перемикача з ключем"
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "SELF_ASSEMBLE": "Набір етикеток для самостійного збирання",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
