--- a/src/i18n/locales/uk/models/low-profile-universal-stopper.json
+++ b/src/i18n/locales/uk/models/low-profile-universal-stopper.json
@@ -1,42 +1,42 @@
 {
   "meta": {
     "name": "Low Profile Universal Stopper®",
-    "description": "Низькопрофільна захисна кришка для кнопок та перемикачів",
-    "heroTitle": "Тонка захисна кришка з класом IP для надійного захисту",
-    "heroDescription": "Low Profile Universal Stopper підходить для внутрішнього та зовнішнього монтажу; ці полікарбонатні кришки можуть використовуватися як захист ручних сповіщувачів або захищати різноманітні пристрої, такі як кнопки та ключ-перемикачі тощо, від пошкоджень та неналежного використання, не перешкоджаючи використанню в надзвичайних ситуаціях. Ці надійні кришки забезпечують відмінний захист від пошкоджень захищених пристроїв (як навмисних, так і випадкових), пилу та бруду, а також складних умов всередині та зовні приміщень. Варіанти монтажу 0, 1 та 7 відповідають вимогам IP 56, варіант монтажу 6 — IP 66. Захист, який забезпечують ці кришки, може допомогти запобігти зловмисній активації пристроїв та заощадити час і кошти для підприємств та громадських будівель. Новий картридж сирени для Low Profile Universal Stopper оснащений вбудованим світлодіодом, який активується разом із звуковою сигналізацією для додаткового візуального стримування.\n\nДля куполоподібної версії Universal Stopper <a href=\"/configurator/universal-stopper\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
+    "description": "Низькопрофільний захисний корпус для кнопок та перемикачів",
+    "heroTitle": "Низькопрофільний захисний корпус з класом захисту IP",
+    "heroDescription": "Low Profile Universal Stopper підходить для внутрішнього або вуличного монтажу. Ці полікарбонатні корпуси можуть використовуватися як захист ручних сповіщувачів або для захисту різних пристроїв, таких як кнопки та перемикачі з ключем, від пошкоджень та неправильного використання, не перешкоджаючи роботі в аварійних ситуаціях. Ці надійні корпуси забезпечують чудовий захист пристроїв (як від навмисних, так і від випадкових пошкоджень), пилу та бруду, а також від складних умов експлуатації всередині та ззовні приміщень. Варіанти монтажу 0, 1 і 7 відповідають вимогам IP56, варіант 6 — IP66. Захист, який забезпечують ці корпуси, допомагає запобігти зловмисній активації пристроїв та заощадити час і кошти для бізнесу та громадських будівель. Новий картридж зумера для Low Profile Universal Stopper оснащений вбудованим світлодіодом, який активується разом зі звуковою сигналізацією для додаткового візуального попередження.\n\nДля купольної версії Universal Stopper <a href=\"/configurator/universal-stopper\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
   },
   "steps": {
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "14": "#14 Низькопрофільна кришка"
+        "14": "#14 Низькопрофільний корпус"
       }
     },
     "hoodSounder": {
-      "title": "КОРПУС І СИРЕНА",
+      "title": "КОЗИРОК І ЗУМЕР",
       "options": {
-        "00": "#00 Корпус без етикетки",
-        "10": "#10 Корпус з етикеткою без сирени",
-        "20": "#20 Корпус з етикеткою та сиреною (ПОДОВЖЕНІ ТЕРМІНИ)",
-        "30": "#30 Корпус з етикеткою, сиреною та релейним кабелем (ПОДОВЖЕНІ ТЕРМІНИ)"
+        "00": "#00 Козирок без напису",
+        "10": "#10 Козирок з написом, без зумера",
+        "20": "#20 Козирок з написом та зумером (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)",
+        "30": "#30 Козирок з написом, зумером та кабелем реле (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)"
       }
     },
     "colourLabel": {
-      "title": "КОЛІР І ЕТИКЕТКА",
+      "title": "КОЛІР І НАПИС",
       "options": {
-        "FR": "#FR Червоний, етикетка 'Fire Alarm'",
-        "NR": "#NR Червоний, без етикетки",
-        "CR": "#CR Червоний, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "EG": "#EG Зелений, етикетка 'Emergency Exit'",
-        "NG": "#NG Зелений, без етикетки",
-        "CG": "#CG Зелений, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NC": "#NC Прозорий, без етикетки",
-        "NB": "#NB Синій, без етикетки",
-        "CB": "#CB Синій, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NW": "#NW Білий, без етикетки",
-        "CW": "#CW Білий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NY": "#NY Жовтий, без етикетки",
-        "CY": "#CY Жовтий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "FR": "#FR Червоний, напис FIRE ALARM",
+        "NR": "#NR Червоний, без напису",
+        "CR": "#CR Червоний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "EG": "#EG Зелений, напис EMERGENCY EXIT",
+        "NG": "#NG Зелений, без напису",
+        "CG": "#CG Зелений, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NC": "#NC Прозорий, без напису",
+        "NB": "#NB Синій, без напису",
+        "CB": "#CB Синій, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NW": "#NW Білий, без напису",
+        "CW": "#CW Білий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NY": "#NY Жовтий, без напису",
+        "CY": "#CY Жовтий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -46,16 +46,16 @@
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
         "DE": "#DE Німецька",
-        "NL": "#NL Нідерландська"
+        "NL": "#NL Голландська"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "0": "#0 Врізний монтаж, відкрита задня частина",
-        "1": "#1 Поверхневий монтаж - прозора прокладка (подвійний монтаж)",
-        "6": "#6 Європейська закрита задня коробка, різьбовий отвір 20мм, герметична монтажна плита",
-        "7": "#7 Європейська закрита задня коробка, різьбовий отвір 20мм, відкрита монтажна плита"
+        "0": "#0 Заглиблений монтаж, відкрита задня частина",
+        "1": "#1 Накладний монтаж, прозорий спейсер (подвійний монтаж)",
+        "6": "#6 Європейська закрита розподільча коробка, різьбовий ввід 20мм, герметична монтажна пластина",
+        "7": "#7 Європейська закрита розподільча коробка, різьбовий ввід 20мм, відкрита монтажна пластина"
       }
     }
   }
