--- a/src/i18n/locales/uk/models/reset-call-points.json
+++ b/src/i18n/locales/uk/models/reset-call-points.json
@@ -1,9 +1,9 @@
 {
   "meta": {
     "name": "ReSet Call Points",
-    "description": "Точки виклику з функцією скидання для пожежної сигналізації",
-    "heroTitle": "Ручний сповіщувач зі скиданням",
-    "heroDescription": "ReSet Call Point — це ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи користувачу переваги елемента зі скиданням. При активації індикатор опускається у видиму область. Після цього пристрій просто скидається ключем і готовий до негайного повторного використання."
+    "description": "Ручні сповіщувачі з можливістю відновлення для систем пожежної сигналізації",
+    "heroTitle": "Ручний сповіщувач з можливістю відновлення",
+    "heroDescription": "ReSet Call Point — це ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи користувачу переваги елемента з можливістю відновлення. При активації індикатор активації випадає у видиму зону. Після цього пристрій просто відновлюється ключем і готовий до негайного повторного використання."
   },
   "steps": {
     "colour": {
@@ -18,29 +18,29 @@
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "HOUSE_FLAME": "Логотип полум'я будинку",
-        "RUNNING_MAN": "Логотип біжучої людини",
-        "SELF_ASSEMBLE": "Набір етикеток для самостійного збирання",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "HOUSE_FLAME": "Піктограма пожежі",
+        "RUNNING_MAN": "Піктограма аварійного виходу",
+        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "01": "#01 Конвенційна модель з резистором 470/680 Ом, Серія 01",
-        "02": "#02 Однополюсний перемикач, Серія 02",
+        "01": "#01 Стандартна пожежна модель з резистором 470/680 Ом, Серія 01",
+        "02": "#02 Однополюсний перемикальний, Серія 02",
         "05": "#05 Sav-wire (2-провідна) з резистором 470/680 Ом та діодом, Серія 05",
-        "11": "#11 Двополюсний перемикач, Серія 11"
+        "11": "#11 Двополюсний перемикальний, Серія 11"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "D2": "#D2 Подвійний монтаж (настінна плита + задня коробка)",
-        "F2": "#F2 Врізний монтаж (настінна плита)",
-        "S2": "#S2 Поверхневий монтаж (задня коробка)"
+        "D2": "#D2 Подвійний монтаж (настінна пластина + розподільча коробка)",
+        "F2": "#F2 Заглиблений монтаж (настінна пластина)",
+        "S2": "#S2 Накладний монтаж (розподільча коробка)"
       }
     }
   }
