--- a/src/i18n/locales/uk/models/universal-stopper.json
+++ b/src/i18n/locales/uk/models/universal-stopper.json
@@ -1,45 +1,45 @@
 {
   "meta": {
     "name": "Universal Stopper®",
-    "description": "Захисна кришка для кнопок та перемикачів",
-    "heroTitle": "Захисна кришка з класом IP для надійного захисту",
-    "heroDescription": "Universal Stopper — це полікарбонатні кришки куполоподібної або низькопрофільної форми для внутрішнього та зовнішнього використання, які захищають такі пристрої, як ручні сповіщувачі, аварійні кнопки та станції подвійної дії тощо, не обмежуючи їх законне використання.\n\nУніверсальна кришка може слугувати захистом для кнопок, станцій, електричних пристроїв або сповіщувачів. Universal Stopper забезпечує відмінний захист від фізичних пошкоджень (як випадкових, так і навмисних), пилу та бруду, а також від складних умов всередині та зовні приміщень. Варіанти монтажу 0 та 1 відповідають вимогам IP54, варіанти 6 та 7 — IP56 (герметична монтажна плита з варіантом 6 забезпечує захист IP66)."
+    "description": "Захисний корпус для кнопок та перемикачів",
+    "heroTitle": "Захисний корпус з класом захисту IP для надійного захисту",
+    "heroDescription": "Universal Stopper — це низькопрофільний або купольний полікарбонатний захисний корпус для внутрішнього та вуличного використання. Захищає такі пристрої, як ручні сповіщувачі, аварійні кнопки та тягові станції подвійної дії, не обмежуючи їх штатну роботу.\n\nУніверсальний корпус може використовуватися для захисту кнопок, тягових станцій, електричних пристроїв або ручних сповіщувачів. Universal Stopper забезпечує надійний захист від фізичних пошкоджень (як випадкових, так і навмисних), пилу та бруду, а також від складних умов експлуатації всередині та ззовні приміщень. Варіанти монтажу 0 і 1 відповідають вимогам IP54, варіанти 6 і 7 — IP56 (герметична монтажна пластина з варіантом 6 забезпечує захист IP66)."
   },
   "steps": {
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "13": "#13 Куполоподібна кришка",
-        "14": "#14 Низькопрофільна кришка"
+        "13": "#13 Купольний корпус",
+        "14": "#14 Низькопрофільний корпус"
       }
     },
     "hoodSounder": {
-      "title": "КОРПУС І СИРЕНА",
+      "title": "КОЗИРОК І ЗУМЕР",
       "options": {
-        "00": "#00 Корпус без етикетки",
-        "10": "#10 Корпус з етикеткою без сирени",
-        "20": "#20 Корпус з етикеткою та сиреною",
-        "30": "#30 Корпус з етикеткою, сиреною та реле"
+        "00": "#00 Козирок без напису",
+        "10": "#10 Козирок з написом, без зумера",
+        "20": "#20 Козирок з написом та зумером",
+        "30": "#30 Козирок з написом, зумером та реле"
       }
     },
     "colourLabel": {
-      "title": "КОЛІР І ЕТИКЕТКА",
+      "title": "КОЛІР І НАПИС",
       "options": {
-        "FR": "#FR Червоний, етикетка 'FIRE ALARM'",
-        "NR": "#NR Червоний, без етикетки",
-        "CR": "#CR Червоний, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "EG": "#EG Зелений, етикетка 'Emergency Exit'",
-        "NG": "#NG Зелений, без етикетки",
-        "CG": "#CG Зелений, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NC": "#NC Прозорий, без етикетки",
-        "NK": "#NK Чорний, без етикетки",
-        "CK": "#CK Чорний, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NB": "#NB Синій, без етикетки",
-        "CB": "#CB Синій, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NW": "#NW Білий, без етикетки",
-        "CW": "#CW Білий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)",
-        "NY": "#NY Жовтий, без етикетки",
-        "CY": "#CY Жовтий, власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "FR": "#FR Червоний, напис FIRE ALARM",
+        "NR": "#NR Червоний, без напису",
+        "CR": "#CR Червоний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "EG": "#EG Зелений, напис EMERGENCY EXIT",
+        "NG": "#NG Зелений, без напису",
+        "CG": "#CG Зелений, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NC": "#NC Прозорий, без напису",
+        "NK": "#NK Чорний, без напису",
+        "CK": "#CK Чорний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NB": "#NB Синій, без напису",
+        "CB": "#CB Синій, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NW": "#NW Білий, без напису",
+        "CW": "#CW Білий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
+        "NY": "#NY Жовтий, без напису",
+        "CY": "#CY Жовтий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -49,16 +49,16 @@
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
         "DE": "#DE Німецька",
-        "NL": "#NL Нідерландська"
+        "NL": "#NL Голландська"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "0": "#0 Врізний монтаж, відкрита задня частина",
-        "1": "#1 Поверхневий монтаж - прозора прокладка (подвійний монтаж)",
-        "6": "#6 Європейська закрита задня коробка, різьбовий отвір 20мм, герметична монтажна плита",
-        "7": "#7 Європейська закрита задня коробка, різьбовий отвір 20мм, відкрита монтажна плита"
+        "0": "#0 Заглиблений монтаж, відкрита задня частина",
+        "1": "#1 Накладний монтаж, прозорий спейсер (подвійний монтаж)",
+        "6": "#6 Європейська закрита розподільча коробка, різьбовий ввід 20мм, герметична монтажна пластина",
+        "7": "#7 Європейська закрита розподільча коробка, різьбовий ввід 20мм, відкрита монтажна пластина"
       }
     }
   }
