--- a/src/i18n/locales/uk/models/waterproof-push-buttons.json
+++ b/src/i18n/locales/uk/models/waterproof-push-buttons.json
@@ -1,20 +1,20 @@
 {
   "meta": {
     "name": "Waterproof Push Buttons",
-    "description": "Водонепроникні кнопки для зовнішнього використання",
-    "heroTitle": "Водонепроникний асортимент кнопок для багатьох застосувань",
-    "heroDescription": "Високоуніверсальний асортимент привабливих водонепроникних кнопок, що поєднує унікальний дизайн, якість та цінність. Ці естетично привабливі низько/високовольтні перемикачі швидко та легко встановлюються. StopperPush — моделі для застосувань, де потрібна миттєва активація натисканням та відпусканням. StopperLatch — моделі для застосувань, де повторна активація має контролюватися. Після ручної активації перемикача його можна скинути лише за допомогою спеціального ключа. Усі моделі доступні в різних кольорах з місцем для маркування функції та інструкцій з експлуатації. Рекомендуємо захистити ваші StopperSwitches за допомогою STI Universal Stopper. Серія водонепроникних кнопок протестована на відповідність IP67."
+    "description": "Вологостійкі кнопки для вуличного використання",
+    "heroTitle": "Вологостійкі кнопки для різноманітних застосувань",
+    "heroDescription": "Широкий асортимент привабливих вологостійких кнопок, що поєднують унікальний дизайн, якість та цінність. Ці естетично привабливі перемикачі низької/високої напруги швидко й легко встановлюються. StopperPush — моделі для застосувань, де потрібна моментальна активація натисканням та відпусканням. StopperLatch — моделі для застосувань, де необхідно контролювати повторну активацію. Після ручної активації перемикач можна скинути лише за допомогою спеціального ключа. Усі моделі доступні в різних кольорах з місцем для маркування функції та інструкцій з експлуатації. Рекомендується захищати ваші StopperSwitches за допомогою STI Universal Stopper. Серія вологостійких кнопок протестована на відповідність IP67."
   },
   "steps": {
     "housingColour": {
       "title": "КОЛІР КОРПУСУ ТА МОНТАЖ",
       "options": {
-        "1": "#1 Червоний (поверхневий монтаж)",
-        "3": "#3 Зелений (поверхневий монтаж)",
-        "5": "#5 Жовтий (поверхневий монтаж)",
-        "7": "#7 Білий (поверхневий монтаж)",
-        "9": "#9 Синій (поверхневий монтаж)",
-        "E": "#E Помаранчевий (поверхневий монтаж)"
+        "1": "#1 Червоний (накладний монтаж)",
+        "3": "#3 Зелений (накладний монтаж)",
+        "5": "#5 Жовтий (накладний монтаж)",
+        "7": "#7 Білий (накладний монтаж)",
+        "9": "#9 Синій (накладний монтаж)",
+        "E": "#E Помаранчевий (накладний монтаж)"
       }
     },
     "buttonColour": {
@@ -31,21 +31,21 @@
     "buttonType": {
       "title": "ТИП КНОПКИ",
       "options": {
-        "0": "#0 Фіксуюча (скидання ключем)",
-        "1": "#1 Миттєва дія"
+        "0": "#0 З фіксацією (відновлення ключем)",
+        "1": "#1 Моментальне відновлення"
       }
     },
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "4": "#4 Багатофункціональний сигнал (SPC-DPC)"
+        "4": "#4 Мультисигнальний (SPC-DPC)"
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "SELF_ASSEMBLE": "Набір етикеток для самостійного збирання",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
