--- a/src/i18n/locales/uk/models/waterproof-reset-call-point.json
+++ b/src/i18n/locales/uk/models/waterproof-reset-call-point.json
@@ -1,9 +1,9 @@
 {
   "meta": {
     "name": "Waterproof ReSet Call Point",
-    "description": "Водонепроникна точка виклику з функцією скидання",
-    "heroTitle": "Ручний сповіщувач IP 67 з елементом скидання",
-    "heroDescription": "Водонепроникний сповіщувач ReSet сумісний з більшістю конвенційних систем пожежної сигналізації. Це унікальний ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи користувачу переваги елемента зі скиданням. При активації індикатор опускається у видиму область. Після цього пристрій просто скидається ключем і готовий до негайного повторного використання."
+    "description": "Вологостійкий ручний сповіщувач з можливістю відновлення",
+    "heroTitle": "Ручний сповіщувач IP67 з елементом відновлення",
+    "heroDescription": "Вологостійкий ручний сповіщувач ReSet сумісний з більшістю стандартних систем пожежної сигналізації. Це унікальний ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи користувачу переваги елемента з можливістю відновлення. При активації індикатор активації випадає у видиму зону. Після цього пристрій просто відновлюється ключем і готовий до негайного повторного використання."
   },
   "steps": {
     "colour": {
@@ -18,20 +18,20 @@
       }
     },
     "label": {
-      "title": "ЕТИКЕТКА",
+      "title": "НАПИС",
       "options": {
-        "HOUSE_FLAME": "Логотип полум'я будинку",
-        "RUNNING_MAN": "Логотип біжучої людини",
-        "SELF_ASSEMBLE": "Набір етикеток для самостійного збирання",
-        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "HOUSE_FLAME": "Піктограма пожежі",
+        "RUNNING_MAN": "Піктограма аварійного виходу",
+        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "01": "#01 Конвенційна пожежна модель (сертифікована EN54-11)",
-        "02": "#02 Однополюсний перемикач",
-        "11": "#11 Двополюсний перемикач"
+        "01": "#01 Стандартна пожежна модель (сертифікація EN54-11)",
+        "02": "#02 Однополюсний перемикальний",
+        "11": "#11 Двополюсний перемикальний"
       }
     }
   }
