--- a/src/i18n/locales/uk/models/euro-stopper.json
+++ b/src/i18n/locales/uk/models/euro-stopper.json
@@ -1,44 +1,44 @@
 {
   "meta": {
     "name": "Euro Stopper®",
-    "description": "Європейська захисна кришка для кнопок",
-    "heroTitle": "Низькопрофільна захисна кришка з опціональною сигналізацією",
-    "heroDescription": "Захисні кришки для точок виклику, які допомагають запобігти зловмисній або випадковій активації. Euro Stopper складається з прозорої, захищеної від несанкціонованого доступу, міцної UV-стабілізованої полікарбонатної кришки та рамки, яка встановлюється поверх точки виклику з розбиванням скла.\n\nGlow Guide — унікальний матеріал, вбудований по периметру рамки, який світиться в темряві, створюючи сяюче світіння навколо ручного сповіщувача та полегшуючи його пошук у темних зонах. Ідеально підходить для шкіл, коледжів, лікарень, будинків престарілих, готелів та всіх громадських будівель, де є історія або загроза хибних активацій."
+    "description": "Європейський захисний корпус для кнопок",
+    "heroTitle": "Низькопрофільний захисний корпус з опціональною сигналізацією",
+    "heroDescription": "Захисні корпуси для ручних сповіщувачів, які допомагають запобігти зловмисній або випадковій активації. Euro Stopper складається з прозорого, захищеного від несанкціонованого доступу, міцного УФ-стійкого полікарбонатного корпусу та рамки, яка встановлюється поверх ручного сповіщувача з імітацією розбиття скла.\n\nGlow Guide — унікальний матеріал, вбудований по периметру рамки, який світиться в темряві, створюючи яскраве сяйво навколо ручного сповіщувача та полегшуючи його пошук у темних місцях. Ідеально підходить для шкіл, коледжів, лікарень, будинків престарілих, готелів та всіх громадських будівель, де є історія або загроза хибних спрацювань."
   },
   "steps": {
     "colourLabel": {
-      "title": "КОЛІР І ЕТИКЕТКА",
+      "title": "КОЛІР І НАПИС",
       "options": {
-        "NR": "#NR Червоний, без етикетки",
-        "CR": "#CR Червоний, власна етикетка",
-        "NG": "#NG Зелений, без етикетки",
-        "CG": "#CG Зелений, власна етикетка",
-        "NY": "#NY Жовтий, без етикетки",
-        "CY": "#CY Жовтий, власна етикетка",
-        "NW": "#NW Білий, без етикетки",
-        "CW": "#CW Білий, власна етикетка",
-        "NB": "#NB Синій, без етикетки",
-        "CB": "#CB Синій, власна етикетка",
-        "NE": "#NE Помаранчевий, без етикетки",
-        "CE": "#CE Помаранчевий, власна етикетка",
-        "NK": "#NK Чорний, без етикетки",
-        "CK": "#CK Чорний, власна етикетка"
+        "NR": "#NR Червоний, без напису",
+        "CR": "#CR Червоний, індивідуальний напис",
+        "NG": "#NG Зелений, без напису",
+        "CG": "#CG Зелений, індивідуальний напис",
+        "NY": "#NY Жовтий, без напису",
+        "CY": "#CY Жовтий, індивідуальний напис",
+        "NW": "#NW Білий, без напису",
+        "CW": "#CW Білий, індивідуальний напис",
+        "NB": "#NB Синій, без напису",
+        "CB": "#CB Синій, індивідуальний напис",
+        "NE": "#NE Помаранчевий, без напису",
+        "CE": "#CE Помаранчевий, індивідуальний напис",
+        "NK": "#NK Чорний, без напису",
+        "CK": "#CK Чорний, індивідуальний напис"
       }
     },
     "sounder": {
-      "title": "СИРЕНА",
+      "title": "ЗУМЕР",
       "options": {
-        "10": "#10 Корпус з етикеткою без сирени",
-        "20": "#20 Корпус з етикеткою та сиреною",
-        "30": "#30 Корпус з етикеткою, сиреною та реле"
+        "10": "#10 Козирок з написом, без зумера",
+        "20": "#20 Козирок з написом та зумером",
+        "30": "#30 Козирок з написом, зумером та реле"
       }
     },
     "mounting": {
       "title": "МОНТАЖ",
       "options": {
-        "0": "#0 Врізний монтаж",
-        "C": "#C Поверхневий монтаж, прокладка 32мм",
-        "D": "#D Поверхневий монтаж, прокладка 50мм"
+        "0": "#0 Заглиблений монтаж",
+        "C": "#C Накладний монтаж, спейсер 32мм",
+        "D": "#D Накладний монтаж, спейсер 50мм"
       }
     }
   }
