--- a/src/i18n/locales/uk/models/g3-multipurpose-push-button.json
+++ b/src/i18n/locales/uk/models/g3-multipurpose-push-button.json
@@ -1,16 +1,16 @@
 {
   "meta": {
     "name": "G3 Multipurpose Push Button",
-    "description": "Багатофункціональна кнопка G3 з опціональною камерою",
+    "description": "Багатоцільова кнопка G3 з опціональною камерою",
     "heroTitle": "Моніторинг та запобігання небажаним активаціям",
-    "heroDescription": "UL-сертифікована багатофункціональна кнопка G3 — це універсальний сигнальний пристрій, розроблений для задоволення різноманітних потреб різних застосувань. Ця інноваційна кнопка має опціональну камеру та унікальний дизайн. Камера призначена для запису відео особи, яка взаємодіє з кнопкою, а також її рухів до та після активації пристрою.\n\nТипи активації включають скидання ключем, миттєву дію та скидання поворотом, що забезпечує гнучкість для будь-якого застосування. За потреби тип кнопки можна переналаштувати відповідно до вимог застосування (може знадобитися нова кришка кнопки для відображення операційного руху).\n\nВибір G3 включає шість кольорів корпусу, стандартний або власний текст (будь-якою мовою), захисні кришки та IP-камеру для додаткової ідентифікації.\n\nДля перегляду GF Fire Alarm Push Button <a href=\"/configurator/gf-fire-alarm-push-button\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
+    "heroDescription": "Багатоцільова кнопка G3 із сертифікацією UL — це універсальний сигнальний пристрій, розроблений для задоволення різноманітних потреб різних застосувань. Ця інноваційна кнопка має опціональну камеру та унікальний дизайн. Камера призначена для запису відео особи, яка взаємодіє з кнопкою, а також її рухів до та після активації пристрою.\n\nТипи роботи включають відновлення ключем, моментальне відновлення та відновлення обертанням, що забезпечує гнучкість для будь-якого застосування. За потреби тип кнопки можна переналаштувати відповідно до потреб застосування (може знадобитися нова кришка кнопки для відображення напрямку руху).\n\nВаріанти G3 включають шість кольорів корпусу, стандартний або індивідуальний напис (будь-якою мовою), захисні корпуси та IP-камеру для додаткової ідентифікації.\n\nЩоб переглянути пожежну кнопку GF, <a href=\"/configurator/gf-fire-alarm-push-button\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
   },
   "steps": {
     "model": {
       "title": "МОДЕЛЬ",
       "options": {
         "A": "#A Без камери",
-        "C": "#C З камерою (включає задню коробку)"
+        "C": "#C З камерою (включає розподільчу коробку)"
       }
     },
     "colour": {
@@ -27,36 +27,36 @@
     "buttonType": {
       "title": "ТИП КНОПКИ",
       "options": {
-        "2": "#2 Скидання ключем",
-        "5": "#5 Миттєва дія",
-        "9": "#9 Скидання поворотом"
+        "2": "#2 Відновлення ключем",
+        "5": "#5 Моментальне відновлення",
+        "9": "#9 Відновлення обертанням"
       }
     },
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "0": "#0 Без кришки",
-        "2": "#2 Захисний щиток"
+        "0": "#0 Без корпусу",
+        "2": "#2 Захисний екран"
       }
     },
     "text": {
-      "title": "ТЕКСТ",
+      "title": "НАПИС",
       "options": {
-        "AB": "#AB СКАСУВАТИ",
-        "EM": "#EM АВАРІЯ",
-        "ES": "#ES АВАРІЙНА ЗУПИНКА",
-        "EV": "#EV ЕВАКУАЦІЯ",
-        "EX": "#EX АВАРІЙНИЙ ВИХІД",
-        "HV": "#HV ВИМКНЕННЯ HVAC",
-        "LD": "#LD БЛОКУВАННЯ",
-        "NT": "#NT БЕЗ ТЕКСТУ",
-        "PL": "#PL ПОЛІЦІЯ",
-        "PO": "#PO АВАРІЙНЕ ВИМКНЕННЯ ЖИВЛЕННЯ",
-        "PS": "#PS ВИМКНЕННЯ ПАЛИВНОГО НАСОСА",
-        "PX": "#PX НАТИСНІТЬ ДЛЯ ВИХОДУ",
-        "RM": "#RM Символ біжучої людини",
-        "XT": "#XT ВИХІД",
-        "ZA": "#ZA Власний текст (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "AB": "#AB ABORT",
+        "EM": "#EM EMERGENCY",
+        "ES": "#ES EMERGENCY STOP",
+        "EV": "#EV EVACUATION",
+        "EX": "#EX EMERGENCY EXIT",
+        "HV": "#HV HVAC SHUT-DOWN",
+        "LD": "#LD LOCKDOWN",
+        "NT": "#NT Без напису",
+        "PL": "#PL POLICE",
+        "PO": "#PO EMERGENCY POWER OFF",
+        "PS": "#PS FUEL PUMP SHUT-DOWN",
+        "PX": "#PX PUSH TO EXIT",
+        "RM": "#RM Піктограма аварійного виходу",
+        "XT": "#XT EXIT",
+        "ZA": "#ZA Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -65,7 +65,7 @@
         "EN": "#EN Англійська",
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
-        "ZL": "#ZL Інша мова (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "ZL": "#ZL Інша мова (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
