--- a/src/i18n/locales/uk/models/stopper-stations.json
+++ b/src/i18n/locales/uk/models/stopper-stations.json
@@ -1,9 +1,9 @@
 {
   "meta": {
     "name": "Stopper® Stations",
-    "description": "Настроювані UL-сертифіковані кнопки та ключ-перемикачі",
-    "heroTitle": "Настроювані UL-сертифіковані кнопки та ключ-перемикачі",
-    "heroDescription": "Створіть ці UL-сертифіковані, ADA-сумісні багатофункціональні кнопки за вашими специфікаціями. Унікальний запатентований дизайн кнопок допомагає значно зменшити випадкові спрацювання. Доступні у шести кольорах, з десятьма варіантами активації кнопок, із захисною кришкою або без неї, та будь-якою мовою для більшості застосувань. Усі Stopper Stations постачаються з універсальною монтажною пластиною як стандарт. Для певних типів активації кнопок потрібні додаткові комплекти задніх коробок для поверхневого монтажу."
+    "description": "Універсальні кнопки та перемикачі з сертифікацією UL",
+    "heroTitle": "Універсальні кнопки та перемикачі з сертифікацією UL",
+    "heroDescription": "Створіть ці сертифіковані UL, сумісні з ADA, багатоцільові кнопки за вашими специфікаціями. Унікальна запатентована конструкція кнопок суттєво знижує ризик випадкової активації. Доступні у шести кольорах, з десятьма варіантами активації, з захисним корпусом або без нього, та будь-якою мовою для більшості застосувань. Усі Stopper Stations постачаються з універсальною монтажною пластиною в стандартній комплектації. Для деяких варіантів активації потрібні додаткові комплекти розподільчих коробок для накладного монтажу."
   },
   "steps": {
     "colour": {
@@ -18,47 +18,47 @@
       }
     },
     "cover": {
-      "title": "КРИШКА",
+      "title": "КОРПУС",
       "options": {
-        "0": "#0 Без кришки",
-        "2": "#2 Захисний щиток"
+        "0": "#0 Без корпусу",
+        "2": "#2 Захисний екран"
       }
     },
     "activation": {
       "title": "АКТИВАЦІЯ",
       "options": {
-        "0": "#0 Скидання ключем",
-        "1": "#1 Скидання поворотом",
-        "2": "#2 Скидання ключем, світиться зеленим, червоним або білим",
+        "0": "#0 Відновлення ключем",
+        "1": "#1 Відновлення обертанням",
+        "2": "#2 Відновлення ключем, підсвітка зелена/червона/біла",
         "3": "#3 Активація ключем",
-        "4": "#4 Миттєва дія",
-        "5": "#5 Миттєва дія, світиться зеленим, червоним або білим",
-        "6-red": "#6 Червоне підсвічування",
-        "6-green": "#6 Зелене підсвічування",
-        "6-blue": "#6 Синє підсвічування",
-        "7-red": "#7 Вологозахищена миттєва дія, червоне підсвічування",
-        "7-green": "#7 Вологозахищена, зелене підсвічування",
-        "7-blue": "#7 Вологозахищена, синє підсвічування",
-        "8": "#8 Пневматичний, світиться зеленим, червоним або білим",
-        "9": "#9 Скидання поворотом, світиться зеленим, червоним або білим"
+        "4": "#4 Моментальне відновлення",
+        "5": "#5 Моментальне відновлення, підсвітка зелена/червона/біла",
+        "6-red": "#6 Червона підсвітка",
+        "6-green": "#6 Зелена підсвітка",
+        "6-blue": "#6 Синя підсвітка",
+        "7-red": "#7 Вологостійка, моментальне відновлення, червона підсвітка",
+        "7-green": "#7 Вологостійка, зелена підсвітка",
+        "7-blue": "#7 Вологостійка, синя підсвітка",
+        "8": "#8 Пневматичний таймер, підсвітка зелена/червона/біла",
+        "9": "#9 Відновлення обертанням, підсвітка зелена/червона/біла"
       }
     },
     "text": {
-      "title": "ТЕКСТ",
+      "title": "НАПИС",
       "options": {
-        "AB": "#AB СКАСУВАТИ",
-        "EM": "#EM АВАРІЯ",
-        "EX": "#EX АВАРІЙНИЙ ВИХІД",
-        "PO": "#PO АВАРІЙНЕ ВИМКНЕННЯ ЖИВЛЕННЯ",
-        "ES": "#ES АВАРІЙНА ЗУПИНКА",
-        "EV": "#EV ЕВАКУАЦІЯ",
-        "XT": "#XT ВИХІД",
-        "PS": "#PS ВИМКНЕННЯ ПАЛИВНОГО НАСОСА",
-        "HV": "#HV ВИМКНЕННЯ HVAC",
-        "LD": "#LD БЛОКУВАННЯ",
-        "PX": "#PX НАТИСНІТЬ ДЛЯ ВИХОДУ",
-        "NT": "#NT БЕЗ ТЕКСТУ, порожня кнопка та/або кришка",
-        "ZA": "#ZA Власний текст (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "AB": "#AB ABORT",
+        "EM": "#EM EMERGENCY",
+        "EX": "#EX EMERGENCY EXIT",
+        "PO": "#PO EMERGENCY POWER OFF",
+        "ES": "#ES EMERGENCY STOP",
+        "EV": "#EV EVACUATION",
+        "XT": "#XT EXIT",
+        "PS": "#PS FUEL PUMP SHUT-DOWN",
+        "HV": "#HV HVAC SHUT-DOWN",
+        "LD": "#LD LOCKDOWN",
+        "PX": "#PX PUSH TO EXIT",
+        "NT": "#NT Без напису, порожня кнопка та/або корпус",
+        "ZA": "#ZA Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "language": {
@@ -67,25 +67,25 @@
         "EN": "#EN Англійська",
         "ES": "#ES Іспанська",
         "FR": "#FR Французька",
-        "ZL": "#ZL Інша мова (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
+        "ZL": "#ZL Інша мова (БЕЗ ПОВЕРНЕННЯ)"
       }
     },
     "installationOptions": {
-      "title": "ВАРІАНТИ МОНТАЖУ",
+      "title": "ОПЦІЇ МОНТАЖУ",
       "options": {
-        "none": "# Додаткові аксесуари для монтажу не потрібні",
-        "&KIT-71100A-R": "#&KIT-71100A-R Червона задня коробка для поверхневого монтажу",
-        "&KIT-71100A-G": "#&KIT-71100A-G Зелена задня коробка для поверхневого монтажу",
-        "&KIT-71100A-Y": "#&KIT-71100A-Y Жовта задня коробка для поверхневого монтажу",
-        "&KIT-71100A-W": "#&KIT-71100A-W Біла задня коробка для поверхневого монтажу",
-        "&KIT-71100A-B": "#&KIT-71100A-B Синя задня коробка для поверхневого монтажу",
-        "&KIT-71100A-E": "#&KIT-71100A-E Помаранчева задня коробка для поверхневого монтажу",
-        "&KIT-71101B-R": "#&KIT-71101B-R Червона задня коробка та комплект прокладок для глибокого монтажу",
-        "&KIT-71101B-G": "#&KIT-71101B-G Зелена задня коробка та комплект прокладок для глибокого монтажу",
-        "&KIT-71101B-Y": "#&KIT-71101B-Y Жовта задня коробка та комплект прокладок для глибокого монтажу",
-        "&KIT-71101B-W": "#&KIT-71101B-W Біла задня коробка та комплект прокладок для глибокого монтажу",
-        "&KIT-71101B-B": "#&KIT-71101B-B Синя задня коробка та комплект прокладок для глибокого монтажу",
-        "&KIT-71101B-E": "#&KIT-71101B-E Помаранчева задня коробка та комплект прокладок для глибокого монтажу"
+        "none": "# Додаткові монтажні аксесуари не потрібні",
+        "&KIT-71100A-R": "#&KIT-71100A-R Червона розподільча коробка для накладного монтажу",
+        "&KIT-71100A-G": "#&KIT-71100A-G Зелена розподільча коробка для накладного монтажу",
+        "&KIT-71100A-Y": "#&KIT-71100A-Y Жовта розподільча коробка для накладного монтажу",
+        "&KIT-71100A-W": "#&KIT-71100A-W Біла розподільча коробка для накладного монтажу",
+        "&KIT-71100A-B": "#&KIT-71100A-B Синя розподільча коробка для накладного монтажу",
+        "&KIT-71100A-E": "#&KIT-71100A-E Помаранчева розподільча коробка для накладного монтажу",
+        "&KIT-71101B-R": "#&KIT-71101B-R Червоний комплект розподільчої коробки та спейсера для глибокого монтажу",
+        "&KIT-71101B-G": "#&KIT-71101B-G Зелений комплект розподільчої коробки та спейсера для глибокого накладного монтажу",
+        "&KIT-71101B-Y": "#&KIT-71101B-Y Жовтий комплект розподільчої коробки та спейсера для глибокого накладного монтажу",
+        "&KIT-71101B-W": "#&KIT-71101B-W Білий комплект розподільчої коробки та спейсера для глибокого накладного монтажу",
+        "&KIT-71101B-B": "#&KIT-71101B-B Синій комплект розподільчої коробки та спейсера для глибокого накладного монтажу",
+        "&KIT-71101B-E": "#&KIT-71101B-E Помаранчевий комплект розподільчої коробки та спейсера для глибокого накладного монтажу"
       }
     }
   }
